--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 PORT = 8000;
+DATABASE_URL = "mongodb+srv://Tshewang:frozela1998@cluster0.vootrwp.mongodb.net/realstate?retryWrites=true&w=majority"
