completed registering the user in the mongodb

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-PORT = 8000;
+PORT = 6000
 DATABASE_URL = "mongodb+srv://Tshewang:frozela1998@cluster0.vootrwp.mongodb.net/realstate?retryWrites=true&w=majority"
